zerops.yml examples new format

--- a/zerops.yml
+++ b/zerops.yml
@@ -52,7 +52,7 @@ zerops:
           export HTTP_X_FORWARDED_PROTO=https
           export COMPOSER_ALLOW_SUPERUSER=1
 
-          composer install
+          composer update
 
           if ! mysql -u"$WORDPRESS_DB_USER" -p"$WORDPRESS_DB_PASSWORD" -h"$WORDPRESS_DB_HOST" -e "SHOW DATABASES LIKE '$WORDPRESS_DB_NAME';" | grep -q "$WORDPRESS_DB_NAME"; then
             mysql -u"$WORDPRESS_DB_USER" -p"$WORDPRESS_DB_PASSWORD" -h"$WORDPRESS_DB_HOST" -e "CREATE DATABASE \`$WORDPRESS_DB_NAME\` CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci;"
@@ -68,6 +68,10 @@ zerops:
           fi
 
           wp plugin activate --all --allow-root
+
+          wp theme activate astra-child --allow-root
+
+          wp rewrite structure "/%postname%" --allow-root
       deploy:
         - ./
         - .git
