--- a/zerops.yml
+++ b/zerops.yml
@@ -31,6 +31,10 @@ zerops:
 
           wp rewrite structure "/%postname%" --allow-root
 
+          wp language plugin update --all --allow-root
+
+          wp language theme update --all --allow-root
+
       deploy:
         - ./
 
