--- a/zerops.yml
+++ b/zerops.yml
@@ -9,6 +9,16 @@ zerops:
         - chmod +x wp-cli.phar
         - sudo mv wp-cli.phar /usr/local/bin/wp
         - composer self-update
+      envVariables:
+        WORDPRESS_DB_USER: ${RUNTIME_WORDPRESS_DB_USER}
+        WORDPRESS_DB_PASSWORD: ${RUNTIME_WORDPRESS_DB_PASSWORD}
+        WORDPRESS_DB_HOST: ${RUNTIME_WORDPRESS_DB_HOST}
+        WORDPRESS_DB_NAME: ${RUNTIME_WORDPRESS_DB_NAME}
+        WORDPRESS_URL: ${RUNTIME_WORDPRESS_URL}
+        WORDPRESS_TITLE: ${RUNTIME_WORDPRESS_TITLE}
+        WORDPRESS_ADMIN_USER: ${RUNTIME_WORDPRESS_ADMIN_USER}
+        WORDPRESS_ADMIN_PASSWORD: ${RUNTIME_WORDPRESS_ADMIN_PASSWORD}
+        WORDPRESS_ADMIN_EMAIL: ${RUNTIME_WORDPRESS_ADMIN_EMAIL}
       buildCommands:
         - |
           export HTTP_X_FORWARDED_PROTO=https
