--- a/zerops.yml
+++ b/zerops.yml
@@ -13,12 +13,17 @@ zerops:
         WORDPRESS_DB_USER: ${RUNTIME_WORDPRESS_DB_USER}
         WORDPRESS_DB_PASSWORD: ${RUNTIME_WORDPRESS_DB_PASSWORD}
         WORDPRESS_DB_HOST: ${RUNTIME_WORDPRESS_DB_HOST}
-        WORDPRESS_DB_NAME: ${RUNTIME_WORDPRESS_DB_NAME}
-        WORDPRESS_URL: ${RUNTIME_WORDPRESS_URL}
+        WORDPRESS_DB_NAME: ${RUNTIME_hostname}_prod
+        WORDPRESS_URL: ${RUNTIME_zeropsSubdomain}
         WORDPRESS_TITLE: ${RUNTIME_WORDPRESS_TITLE}
         WORDPRESS_ADMIN_USER: ${RUNTIME_WORDPRESS_ADMIN_USER}
         WORDPRESS_ADMIN_PASSWORD: ${RUNTIME_WORDPRESS_ADMIN_PASSWORD}
         WORDPRESS_ADMIN_EMAIL: ${RUNTIME_WORDPRESS_ADMIN_EMAIL}
+        WFAF_STORAGE_ENGINE: ${RUNTIME_WFAF_STORAGE_ENGINE}
+        WORDPRESS_STORAGE_ACCESS_KEY: ${RUNTIME_WORDPRESS_STORAGE_ACCESS_KEY}
+        WORDPRESS_STORAGE_BUCKET: ${RUNTIME_WORDPRESS_STORAGE_BUCKET}
+        WORDPRESS_STORAGE_KEY_ID: ${RUNTIME_WORDPRESS_STORAGE_KEY_ID}
+        WORDPRESS_STORAGE_URL: ${RUNTIME_WORDPRESS_STORAGE_URL}
       buildCommands:
         - |
           export HTTP_X_FORWARDED_PROTO=https
