--- a/zerops.yml
+++ b/zerops.yml
@@ -4,7 +4,7 @@ zerops:
       base: php@8.1
       os: ubuntu
       prepareCommands:
-        - apt-get update && apt-get install -y mariadb-client
+        - sudo apt-get update && sudo apt-get install -y mariadb-client
         - curl -sS https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar -o wp-cli.phar
         - chmod +x wp-cli.phar
         - sudo mv wp-cli.phar /usr/local/bin/wp
