--- a/zerops.yml
+++ b/zerops.yml
@@ -8,7 +8,7 @@ zerops:
         - curl -sS https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar -o wp-cli.phar
         - chmod +x wp-cli.phar
         - sudo mv wp-cli.phar /usr/local/bin/wp
-        - composer self-update
+        - sudo composer self-update
       envVariables:
         WORDPRESS_DB_USER: ${RUNTIME_WORDPRESS_DB_USER}
         WORDPRESS_DB_PASSWORD: ${RUNTIME_WORDPRESS_DB_PASSWORD}
